--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Velkomin á Rafvirkja!</h1>
         <nav>
             <ul>
-                <li><a href="Lager-rst/index.html">Heim</a></li>
-                <li><a href="Lager-rst/vorur.html">Vörur</a></li>
-                <li><a href="Lager-rst/thjonusta.html">Þjónusta</a></li>
-                <li><a href="Lager-rst/Vorur1.html">Hafa samband</a></li>
+                <li><a href="/Lager-rst/index.html">Heim</a></li>
+                <li><a href="/Lager-rst/vorur.html">Vörur</a></li>
+                <li><a href="/Lager-rst/thjonusta.html">Þjónusta</a></li>
+                <li><a href="/Lager-rst/Vorur1.html">Hafa samband</a></li>
             </ul>
         </nav>
     </header>
