--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="/Lager-rst/index.html">Heim</a></li>
                 <li><a href="/Lager-rst/vorur.html">Vörur</a></li>
                 <li><a href="/Lager-rst/thjonusta.html">Þjónusta</a></li>
-                <li><a href="/Lager-rst/Vorur1.html">Hafa samband</a></li>
+                <li><a href="/Lager-rst/thjonusta.html">Hafa samband</a></li>
             </ul>
         </nav>
     </header>
