--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a href="index.html">Heim</a></li>
                 <li><a href="vorur.html">Vörur</a></li>
-                <li><a href="thjonusta.html">Þjónusta</a></li>
-                <li><a href="thjonusta.html">Hafa samband</a></li>
+                <li><a href="#">Þjónusta</a></li>
+                <li><a href="#">Hafa samband</a></li>
             </ul>
         </nav>
     </header>
