--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Heim</a></li>
-                <li><a href="vorur.html">Vörur</a></li>
+                <li><a href="Vorur.html">Vörur</a></li>
                 <li><a href="thjonusta.html">Þjónusta</a></li>
-                <li><a href="Vorur1.html">Hafa samband</a></li>
+                <li><a href="vorur1.html">Hafa samband</a></li>
             </ul>
         </nav>
     </header>
